--- a/xnet/style.scss
+++ b/xnet/style.scss
@@ -1,20 +1,16 @@
 // out: style.css
 
-@gray: #e5e5e5;
-@white: #fff;
-@blue: #337ab7;
-@dark-blue: #2e6da4;
-@btn-success: #5cb85c;
+$gray: #e5e5e5;
+$white: #fff;
+$blue: #337ab7;
+$dark-blue: #2e6da4;
+$btn-success: #5cb85c;
 
-nav {
-  // height: 60px;
-  // background-color: @white;
-  // border-bottom: 1px solid @gray;
-
-  button{
-    margin-top:8px;
-  }
-}
+// nav {
+//   a{
+//     margin-top:8px;
+//   }
+// }
 
 header{
   font-size: 18px;
@@ -22,7 +18,7 @@ header{
 }
 
 .operators{
-  background-color: @gray;
+  background-color: $gray;
   width: 100px;
   text-align: center;
   padding: 5px 0px 5px 0px;
@@ -37,23 +33,27 @@ header{
 
     &:hover{
       text-decoration: none;
-      color: @blue;
+      color: $blue;
     }
   }
 }
 
 nav.menu{
   margin-top: 20px;
-  background-color: @blue;
+  background-color: $blue;
   border-radius: 0px !important;
   min-height: 0px;
   border: 0px !important;
 
   a{
-      color: @gray;
+      color: $gray;
 
       &:hover{
-        background-color: @dark-blue !important;
+        background-color: $dark-blue !important;
+      }
+
+      &:focus {
+        background-color: $dark-blue !important;
       }
   }
 
@@ -71,13 +71,13 @@ nav.menu{
 
 article{
   .panel-heading{
-    background-color: @btn-success !important;
-    color: @white !important;
+    background-color: $btn-success !important;
+    color: $white !important;
   }
 
   .btn-success{
     color: #000;
-    background-color: @white;
+    background-color: $white;
   }
 
 
