--- a/xnet/style.css
+++ b/xnet/style.css
@@ -1,58 +1,1 @@
-nav button {
-  margin-top: 8px;
-}
-header {
-  font-size: 18px;
-  margin-top: 70px;
-}
-.operators {
-  background-color: #e5e5e5;
-  width: 100px;
-  text-align: center;
-  padding: 5px 0px 5px 0px;
-}
-.phones {
-  float: left;
-}
-.phones a {
-  text-decoration: none;
-  color: #000;
-}
-.phones a:hover {
-  text-decoration: none;
-  color: #337ab7;
-}
-nav.menu {
-  margin-top: 20px;
-  background-color: #337ab7;
-  border-radius: 0px !important;
-  min-height: 0px;
-  border: 0px !important;
-}
-nav.menu a {
-  color: #e5e5e5;
-}
-nav.menu a:hover {
-  background-color: #2e6da4 !important;
-}
-nav.menu .navbar-nav {
-  float: none !important;
-  display: block !important;
-  text-align: center !important;
-}
-nav.menu .navbar-nav > li {
-  float: none !important;
-  display: inline-block !important;
-}
-article .panel-heading {
-  background-color: #5cb85c !important;
-  color: #ffffff !important;
-}
-article .btn-success {
-  color: #000;
-  background-color: #ffffff;
-}
-footer.navbar {
-  border-radius: 0px;
-  margin-bottom: 0px !important;
-}
+header{font-size:18px;margin-top:70px}.operators{background-color:#e5e5e5;width:100px;text-align:center;padding:5px 0px 5px 0px}.phones{float:left}.phones a{text-decoration:none;color:#000}.phones a:hover{text-decoration:none;color:#337ab7}nav.menu{margin-top:20px;background-color:#337ab7;border-radius:0px !important;min-height:0px;border:0px !important}nav.menu a{color:#e5e5e5}nav.menu a:hover{background-color:#2e6da4 !important}nav.menu a:focus{background-color:#2e6da4 !important}nav.menu .navbar-nav{float:none !important;display:block !important;text-align:center !important}nav.menu .navbar-nav>li{float:none !important;display:inline-block !important}article .panel-heading{background-color:#5cb85c !important;color:#fff !important}article .btn-success{color:#000;background-color:#fff}footer.navbar{border-radius:0px;margin-bottom:0px !important}
